2013-12-22  Leif Lindholm <leif.lindholm@linaro.org>

	Add arm64 Linux loader.

2013-12-22  Leif Lindholm <leif.lindholm@linaro.org>

	Add grub_fdt_create_empty_tree() and grub_fdt_set_prop64().

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add module loading and parsing boot time checkpoints.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/arm/linux.c: Pass arguments through on ATAG
	platforms.

2013-12-22  Lars Wendler <polynomial-c@gentoo.org>

	* util/grub-mkconfig.in: Skip non-executable files.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Workaround buggy timer in raspberry pie by using our own timer
	implementation.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/arm/uboot/kernel.h (GRUB_KERNEL_MACHINE_HEAP_SIZE):
	Increase to 16 MiB to allow loading the whole memdisk.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ARM Linux Loader on non-FDT platforms.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Choose link format based on host_os on emu.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c: Non-unix build fix.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c: Build fix for emu.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Build fixes for argp.h with older gcc.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-glue-efi.c: Use "universal binary" rather "fat binary"
	in strings.

	Suggested by: David Prévot.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/crypto.h (grub_crypto_xor): Fix cast-align warning.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable -Wformat=2 if it's supported.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -Wmissing-include-dirs -Wmissing-prototypes
	-Wmissing-declarations if supported.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>
